@@ -9,7 +9,11 @@ package com.powsybl.iidm.network.impl;
 
 import com.powsybl.iidm.network.*;
 import com.powsybl.commons.ref.Ref;
+import com.powsybl.iidm.network.regulation.*;
 import gnu.trove.list.array.TDoubleArrayList;
+
+import javax.annotation.Nonnull;
+import java.util.Optional;
 
 /**
  * {@inheritDoc}
@@ -22,24 +26,37 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
 
     private final TDoubleArrayList targetP;
 
-    private final TDoubleArrayList targetQ;
+    private final TDoubleArrayList localTargetQ;
+
+    private final TDoubleArrayList localTargetV;
 
     private double minP;
 
     private double maxP;
 
-    BatteryImpl(Ref<NetworkImpl> ref, String id, String name, boolean fictitious, double targetP, double targetQ, double minP, double maxP) {
+    private VoltageRegulationExt voltageRegulation;
+
+    BatteryImpl(Ref<NetworkImpl> ref, String id, String name, boolean fictitious,
+                double targetP, double localTargetQ, double localTargetV,
+                VoltageRegulation.AttributesWithTerminal voltageRegulationAttributes,
+                double minP, double maxP) {
         super(ref, id, name, fictitious);
+
         this.minP = minP;
         this.maxP = maxP;
+
+        this.voltageRegulation = VoltageRegulationImpl.createVoltageRegulation(this, this, Battery.class, ref, voltageRegulationAttributes);
+
         this.reactiveLimits = new ReactiveLimitsHolderImpl(this, new MinMaxReactiveLimitsImpl(-Double.MAX_VALUE, Double.MAX_VALUE));
 
         int variantArraySize = ref.get().getVariantManager().getVariantArraySize();
         this.targetP = new TDoubleArrayList(variantArraySize);
-        this.targetQ = new TDoubleArrayList(variantArraySize);
+        this.localTargetQ = new TDoubleArrayList(variantArraySize);
+        this.localTargetV = new TDoubleArrayList(variantArraySize);
         for (int i = 0; i < variantArraySize; i++) {
             this.targetP.add(targetP);
-            this.targetQ.add(targetQ);
+            this.localTargetQ.add(localTargetQ);
+            this.localTargetV.add(localTargetV);
         }
     }
 
@@ -74,23 +91,33 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
         return this;
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public double getTargetQ() {
-        return targetQ.get(getNetwork().getVariantIndex());
+        return this.getLocalTargetQ();
+    }
+
+    @Override
+    public Battery setTargetQ(double targetQ) {
+        return this.setLocalTargetQ(targetQ);
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public Battery setTargetQ(double targetQ) {
+    public double getLocalTargetQ() {
+        return localTargetQ.get(getNetwork().getVariantIndex());
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Battery setLocalTargetQ(double targetQ) {
         NetworkImpl network = getNetwork();
         ValidationUtil.checkQ0(this, targetQ, network.getMinValidationLevel(), network.getReportNodeContext().getReportNode());
         int variantIndex = network.getVariantIndex();
-        double oldValue = this.targetQ.set(variantIndex, targetQ);
+        double oldValue = this.localTargetQ.set(variantIndex, targetQ);
         String variantId = network.getVariantManager().getVariantId(variantIndex);
         network.invalidateValidationLevel();
         notifyUpdate("targetQ", variantId, oldValue, targetQ);
@@ -144,7 +171,22 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public TerminalExt getTerminal() {
-        return terminals.get(0);
+        return terminals.getFirst();
+    }
+
+    @Override
+    public Battery setLocalTargetV(double targetV) {
+        NetworkImpl n = getNetwork();
+        int variantIndex = n.getVariantIndex();
+        double oldValueLocalTargetV = this.localTargetV.set(variantIndex, targetV);
+        String variantId = n.getVariantManager().getVariantId(variantIndex);
+        notifyUpdate("localTargetV", variantId, oldValueLocalTargetV, targetV);
+        return this;
+    }
+
+    @Override
+    public double getLocalTargetV() {
+        return this.localTargetV.get(getNetwork().getVariantIndex());
     }
 
     /**
@@ -176,7 +218,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public ReactiveCapabilityCurveAdder newReactiveCapabilityCurve() {
-        return new ReactiveCapabilityCurveAdderImpl(this);
+        return new ReactiveCapabilityCurveAdderImpl<>(this);
     }
 
     /**
@@ -184,7 +226,7 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
      */
     @Override
     public MinMaxReactiveLimitsAdder newMinMaxReactiveLimits() {
-        return new MinMaxReactiveLimitsAdderImpl(this);
+        return new MinMaxReactiveLimitsAdderImpl<>(this);
     }
 
     /**
@@ -194,11 +236,14 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
     public void extendVariantArraySize(int initVariantArraySize, int number, int sourceIndex) {
         super.extendVariantArraySize(initVariantArraySize, number, sourceIndex);
         targetP.ensureCapacity(targetP.size() + number);
-        targetQ.ensureCapacity(targetQ.size() + number);
+        localTargetQ.ensureCapacity(localTargetQ.size() + number);
+        localTargetV.ensureCapacity(localTargetV.size() + number);
         for (int i = 0; i < number; i++) {
             targetP.add(targetP.get(sourceIndex));
-            targetQ.add(targetQ.get(sourceIndex));
+            localTargetQ.add(localTargetQ.get(sourceIndex));
+            localTargetV.add(localTargetV.get(sourceIndex));
         }
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.extendVariantArraySize(initVariantArraySize, number, sourceIndex));
     }
 
     /**
@@ -208,7 +253,9 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
     public void reduceVariantArraySize(int number) {
         super.reduceVariantArraySize(number);
         targetP.remove(targetP.size() - number, number);
-        targetQ.remove(targetQ.size() - number, number);
+        localTargetQ.remove(localTargetQ.size() - number, number);
+        localTargetV.remove(localTargetV.size() - number, number);
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.reduceVariantArraySize(number));
     }
 
     /**
@@ -219,7 +266,60 @@ public class BatteryImpl extends AbstractConnectable<Battery> implements Battery
         super.allocateVariantArrayElement(indexes, sourceIndex);
         for (int index : indexes) {
             targetP.set(index, targetP.get(sourceIndex));
-            targetQ.set(index, targetQ.get(sourceIndex));
+            localTargetQ.set(index, localTargetQ.get(sourceIndex));
+            localTargetV.set(index, localTargetV.get(sourceIndex));
         }
+        this.getOptionalVoltageRegulation().ifPresent(vr -> vr.allocateVariantArrayElement(indexes, sourceIndex));
     }
+
+    @Override
+    public void remove() {
+        getOptionalVoltageRegulation().ifPresent(VoltageRegulationExt::onRemove);
+        super.remove();
+    }
+
+    @Override
+    public VoltageRegulation getVoltageRegulation() {
+        return this.voltageRegulation;
+    }
+
+    private Optional<VoltageRegulationExt> getOptionalVoltageRegulation() {
+        return Optional.ofNullable(this.voltageRegulation);
+    }
+
+    @Override
+    public VoltageRegulationBuilder newVoltageRegulation() {
+        return new VoltageRegulationBuilderImpl(Battery.class, this, this, getNetwork().getRef(), this::setVoltageRegulation);
+    }
+
+    @Override
+    public void removeVoltageRegulation() {
+        ValidationUtil.checkLocalTargetQandV(this, Battery.class, this.getLocalTargetV(), this.getLocalTargetQ(), true, false, false, null, getNetwork().getMinValidationLevel(), getNetwork().getReportNodeContext().getReportNode());
+        getOptionalVoltageRegulation().ifPresent(VoltageRegulationExt::onRemove);
+        this.voltageRegulation = null;
+    }
+
+    /**
+     * Creates or updates the voltage regulation associated with this battery.
+     * <p>
+     * If a voltage regulation already exists, only the current variant attributes are updated from the
+     * provided voltage regulation, while keeping the existing instance.
+     * </p>
+     * <p>
+     * This method must remain private to ensure voltage regulation lifecycle operations are done through
+     * the public API and to avoid sharing a voltage regulation instance between equipments.
+     * </p>
+     *
+     * @param voltageRegulation the voltage regulation to attach or use as source attributes
+     * @return the voltage regulation associated with this equipment
+     */
+    private VoltageRegulationExt setVoltageRegulation(@Nonnull VoltageRegulationExt voltageRegulation) {
+        if (this.voltageRegulation == null) {
+            this.voltageRegulation = voltageRegulation;
+        } else {
+            this.voltageRegulation.setAttributesOnCurrentVariant(voltageRegulation);
+        }
+        return this.voltageRegulation;
+    }
+
 }
